Improve directory validation in `SerializationSchemaValidationTest` by handling invalid paths and non-directory values; simplify file reading with `Files.readString`.